--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,23 +30,31 @@ stream {
         server {
                 listen 443;
                 ssl_preread  on;
+                proxy_connect_timeout 5s;
+                proxy_timeout 10s;
                 proxy_pass backend:$internalport;
         }
 
         server {
                 listen 8070;
+                proxy_connect_timeout 5s;
+                proxy_timeout 10s;        
                 proxy_pass backend:8080;
         }
 
         server {
                 # direct connect to 8883 fir the bot or 3000 for the frontend
                 listen 8883;
+                proxy_connect_timeout 5s;
+                proxy_timeout 10s;        
                 proxy_pass backend:$internalport;
         }
 
 
         server {
                 listen 3000;
+                proxy_connect_timeout 5s;
+                proxy_timeout 10s;        
                 proxy_pass backend:3000;
         }
 }
