--- a/compose.yml
+++ b/compose.yml
@@ -1,8 +1,7 @@
-version: '3'
-
 services:
 
   mysql:
+    container_name: backend
     image: mysql:latest
     ports:
       - 3306:3306
@@ -30,6 +29,7 @@ services:
       network: host
       tags:
         - "${REGISTRY}/backend"
+    container_name: backend
     networks:
       ecovacs_stack:
       ecovacs:
@@ -50,6 +50,7 @@ services:
     restart: unless-stopped
 
   nginx:
+    container_name: nginx
     depends_on:
       - backend
     image: nginx:alpine
@@ -76,6 +77,7 @@ services:
       network: host
       tags:
         - "${REGISTRY}/frontend"
+    container_name: frontend
     user: '${REAL_UID}:${REAL_GID}'
     environment:
       - WDS_SOCKET_PORT=0
